--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
     "@react-navigation/native-stack": "^6.2.5",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-fast-image": "^8.5.11",
     "react-native-modal": "^13.0.0",
+    "react-native-read-more-text": "^1.1.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.0",
     "react-native-snackbar-component": "^1.1.12",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^12.1.1",
-    "react-native-vector-icons": "^9.0.0"
+    "react-native-vector-icons": "^9.0.0",
+    "react-native-video": "^5.2.0",
+    "react-native-video-player": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
