--- a/android/build.gradle
+++ b/android/build.gradle
@@ -36,5 +36,10 @@ allprojects {
         google()
         maven { url 'https://www.jitpack.io' }
          jcenter()
+          // ADD THIS
+      maven { url 'https://maven.google.com' }
+
+      // ADD THIS
+      maven { url "https://www.jitpack.io" }
     }
 }
