--- a/package.json
+++ b/package.json
@@ -12,22 +12,35 @@
   "dependencies": {
     "@react-native-firebase/app": "^13.1.0",
     "@react-native-firebase/auth": "^13.1.0",
+    "@react-native-firebase/firestore": "^14.2.2",
+    "@react-native-firebase/storage": "^14.2.2",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@skele/components": "^1.0.0-alpha.40",
+    "moment": "^2.29.1",
+    "numbro": "^2.3.5",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-create-thumbnail": "^1.5.1",
     "react-native-fast-image": "^8.5.11",
+    "react-native-get-random-values": "^1.7.2",
+    "react-native-image-crop-picker": "^0.37.2",
     "react-native-modal": "^13.0.0",
+    "react-native-progress": "^5.0.0",
     "react-native-read-more-text": "^1.1.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.0",
     "react-native-snackbar-component": "^1.1.12",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-video": "^5.2.0",
-    "react-native-video-player": "^0.12.0"
+    "react-native-video-player": "^0.12.0",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
