--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@skele/components": "^1.0.0-alpha.40",
+    "axios": "^0.25.0",
     "moment": "^2.29.1",
     "numbro": "^2.3.5",
     "react": "17.0.2",
