--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.25.0",
     "moment": "^2.29.1",
     "numbro": "^2.3.5",
+    "radio-buttons-react-native": "^1.0.4",
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-create-thumbnail": "^1.5.1",
