--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-native-firebase/app": "^13.1.0",
     "@react-native-firebase/auth": "^13.1.0",
     "@react-native-firebase/firestore": "^14.2.2",
+    "@react-native-firebase/functions": "^14.5.0",
+    "@react-native-firebase/messaging": "^14.5.0",
     "@react-native-firebase/storage": "^14.2.2",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
